--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = regression
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.regression
+PRODUCT_BUNDLE_IDENTIFIER = com.phemeftheria.regression
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2023 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2023 com.phemeftheria. All rights reserved.
