--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,22 +30,38 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  drift: ^2.12.1
   cupertino_icons: ^1.0.2
+  sqlite3_flutter_libs: ^0.5.0
+  path_provider: ^2.0.0
+  path: ^1.8.3
+  freezed: ^2.4.1
+  uuid: ^3.0.6
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.8.1
+  fpdart: ^1.1.0
+  flutter_riverpod: ^2.4.1
+  riverpod_annotation: ^2.1.4
+  easy_localization: ^3.0.3
+  go_router: ^11.1.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  drift_dev: ^2.12.1
+  build_runner: ^2.4.6
+  mocktail: ^1.0.0
+  custom_lint:
+  riverpod_generator: ^2.3.1
+  riverpod_lint: ^2.0.3
+  go_router_builder: ^2.3.3
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -62,7 +78,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
+  assets:
+    - assets/langs/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
