--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = regression
+PRODUCT_NAME = regressions
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.phemeftheria.regression
+PRODUCT_BUNDLE_IDENTIFIER = com.phemeftheria.regressions
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2023 com.phemeftheria. All rights reserved.
