--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "regression",
-    "short_name": "regression",
+    "name": "regressions",
+    "short_name": "regressions",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
